samples/_failures_safe/1761176806_507dd4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24c6efc7.c: In function ‘main’:
./samples/SAFE/__tmp_24c6efc7.c:182:5: error: expected declaration or statement at end of input
  182 |     printf("%-12s %-16s %s\n", "--------", "----", "-----");
      |     ^~~~~~
